crates/knok-build/tests/ui/missing_vulkan_feature.stderr
error[E0599]: no variant or associated item named `VulkanSpirv` found for enum `knok_build::Backend` in the current scope
 --> tests/ui/missing_vulkan_feature.rs:5:40
  |
5 | #[knok_build::graph(backend = Backend::VulkanSpirv)]
  |                                        ^^^^^^^^^^^ variant or associated item not found in `knok_build::Backend`
